# Project19_20

./: Epidemic.tar.xz  README.md
Epidemic/: Board.test.cpp  CMakeLists.txt  count_cell.hpp  evolve.cpp  evolve.hpp  input.cpp  input.test.cpp  main.cpp  step.test.cpp  stepnq.cpp  stepq.cpp  time_function.hpp
Epidemic/necessary_files/: input_test2.txt  input_test6.txt  input_test7.txt
epidemia/: CMakeLists.txt  board.hpp  epidemic.C  evolve.cpp  evolve.test.cpp  evolve_step.test.cpp  input.cpp  input.hpp  input.test.cpp  input_test1.txt  input_test2.txt  input_test3.txt  main.cpp  near_infect.cpp  near_infect.hpp  near_infect.test.cpp  output.txt  project_epidemic  run_Board_tests  run_evolve_step_tests  run_global_tests  run_near_infect_tests  run_time_function_tests  step.hpp  step.test.cpp  stepnq.cpp  stepq.cpp  time_function.hpp  time_function.test.cpp
epidemia/necessary_files/: input.txt  input_test3.txt  input_test4.txt  input_test5.txt
